syntax = "proto3";

option go_package = "github.com/carpetsage/EggContractor/solo/pb";

import "api/egginc.proto";

message SoloContract {
  string player_id = 13;
  string player_nickname = 14;
  string id = 1;
  string name = 2;
  bool is_elite = 3;
  EggType egg_type = 12;
  double ultimate_goal = 4;
  repeated Reward rewards = 11;
  double eggs_laid = 5;
  double eggs_per_second = 6;
  double seconds_until_production_deadline = 8;
  double seconds_until_collection_deadline = 9;
  double server_refresh_timestamp = 10;
}
